--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp_base_install",
+  "name": "rabo_micosite",
   "version": "1.0.0",
   "description": "WP Base Install Javascript Dependencies",
   "main": "index.js",
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://bitbucket.org/paradowskicreative/wp_base_install.git"
+    "url": "git+https://bitbucket.org/paradowskicreative/rabo_micosite.git"
   },
   "jest": {
     "verbose": true,
@@ -43,42 +43,42 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/paradowskicreative/wp_base_install#readme",
+  "homepage": "https://bitbucket.org/paradowskicreative/rabo_micosite#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "autoprefixer": "^9.1.5",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-add-module-exports": "^1.0.0",
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "autoprefixer": "^9.7.3",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
-    "commander": "^2.19.0",
+    "commander": "^2.20.3",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.4",
     "dotenv": "^6.1.0",
-    "eslint": "^5.6.1",
+    "eslint": "^5.16.0",
     "file-loader": "^2.0.0",
-    "glob": "^7.1.3",
-    "jest": "^24.1.0",
-    "jest-puppeteer": "^4.0.0",
+    "glob": "^7.1.6",
+    "jest": "^24.9.0",
+    "jest-puppeteer": "^4.3.0",
     "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.13.0",
     "normalize-scss": "^7.0.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
-    "puppeteer": "^1.12.2",
-    "sass-loader": "^7.1.0",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "puppeteer": "^1.20.0",
+    "sass-loader": "^7.3.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "react": "^16.8.6"
+    "@babel/polyfill": "^7.7.0",
+    "react": "^16.12.0"
   }
 }
