--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
-    "react": "^16.12.0"
+    "jquery": "^3.4.1",
+    "react": "^16.12.0",
+    "slick-carousel": "^1.8.1"
   }
 }
