--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "jquery": "^3.4.1",
+    "magnific-popup": "^1.1.0",
     "react": "^16.12.0",
     "slick-carousel": "^1.8.1"
   }
