--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rabo_micosite",
+  "name": "rabo_microsite",
   "version": "1.0.0",
   "description": "WP Base Install Javascript Dependencies",
   "main": "index.js",
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://bitbucket.org/paradowskicreative/rabo_micosite.git"
+    "url": "git+https://bitbucket.org/paradowskicreative/rabo_microsite.git"
   },
   "jest": {
     "verbose": true,
@@ -43,7 +43,7 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/paradowskicreative/rabo_micosite#readme",
+  "homepage": "https://bitbucket.org/paradowskicreative/rabo_microsite#readme",
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
