--- a/package.json
+++ b/package.json
@@ -79,9 +79,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
+    "gsap": "^3.0.4",
     "jquery": "^3.4.1",
     "magnific-popup": "^1.1.0",
     "react": "^16.12.0",
+    "scrollmagic": "^2.0.7",
+    "scrollmagic-plugin-gsap": "^1.0.4",
     "slick-carousel": "^1.8.1"
   }
 }
